--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name=TUTTARAPUDI MOUNIKA"viewport" content="width=device-width, initial-scale=1.0">
     <title>BTech CSE Student Profile</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: , sans-serif;
             background-color: #f4f4f9;
             margin: 0;
             padding: 0;
@@ -75,17 +75,17 @@
 <body>
 
 <header>
-    <h1>John Doe - BTech CSE Student</h1>
+    <h1>MOUNIKA TUTTARAOUDI - BTech CSE Student</h1>
     <p>Computer Science Engineering | Web Development | Machine Learning Enthusiast</p>
 </header>
 
-<section class="container">
+<section class="btech 2nd year">
     <div class="about">
-        <h2 class="section-title">About Me</h2>
+        <h2 class="B TECH 2ND YEAR">About Me</h2>
         <p>Hi, I'm John Doe, a Computer Science Engineering student currently pursuing my BTech degree. I'm passionate about programming, web development, and solving complex problems. I have experience with various programming languages and technologies and am always eager to learn new things.</p>
     </div>
 
-    <div class="skills">
+    <div class="WEB DEVELOPNG">
         <h2 class="section-title">Skills</h2>
         <ul>
             <li>Programming Languages: Python, Java, C++, JavaScript</li>
@@ -110,13 +110,13 @@
     <div class="contact">
         <h2 class="section-title">Contact</h2>
         <p>If you'd like to get in touch, feel free to reach out via email or check out my LinkedIn profile.</p>
-        <p>Email: <a href="mailto:johndoe@example.com">johndoe@example.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/johndoe/" target="_blank">linkedin.com/in/johndoe</a></p>
+        <p>Email: <a href="mounikatuttarapudi95532@gmail.com>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/mounika/" target="_blank">linkedin.com/in/mounika</a></p>
     </div>
 </section>
 
 <footer>
-    <p>&copy; 2025 John Doe. All Rights Reserved.</p>
+    <p>&copy; 2025 mounika. All Rights Reserved.</p>
 </footer>
 
 </body>
