--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name=TUTTARAPUDI MOUNIKA"viewport" content="width=device-width, initial-scale=1.0">
-    <title>BTech CSE Student Profile</title>
+    <title>BTech CSE Student in vishaka institute of enginnering and technology,vishskapatnam. Profile</title>
     <style>
+        <p>age=19,gender=female<p>
+        <p>address=near D mart in eluru<p>
         body {
             font-family: , sans-serif;
             background-color: #f4f4f9;
