--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
         <p>age=19,gender=female<p>
         <p>address=near D mart in eluru<p>
+        <p> skills=c++,java.<p>
         body {
             font-family: , sans-serif;
             background-color: #f4f4f9;
